--- a/twitgrid.html
+++ b/twitgrid.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8">
 <title>TwitGrid: Because TweetDeck wastes too many px, and my time.</title>
 <style>
 	/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
@@ -35,6 +36,11 @@
 		Then added: https://stackoverflow.com/questions/8150191/disable-elastic-scrolling-in-safari/16327467#16327467 (by firing the scrolling context on document.body instead of window)
 		https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-snap-type
 	*/
+	html {
+		font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+		line-height: 1.5;
+	}
+
 	html,
 	body {
 		height: 100%;
@@ -42,12 +48,22 @@
 		overflow: auto;
 	}
 
-	body { scroll-snap-type: y mandatory; background-color: rgb(41, 47, 51); }
+	body  { scroll-snap-type: y mandatory; background-color: rgb(41, 47, 51); }
 	.page { scroll-snap-align: start; }
 
 	/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 	.twits { display: flex; flex-direction: row; }
 	.twit  { flex: 0 0 20%; }
+
+	/* https://philipwalton.github.io/solved-by-flexbox/demos/vertical-centering/ */
+	.max-w-lg      { max-width: 32rem; }
+	.self-start    { align-self: flex-start; }
+	.self-end      { align-self: flex-end; }
+	.error-flexbox { display: flex; align-items: center; justify-content: center; height: 85vh; }
+	.error-box     { text-align: center; color: #fff5f5; }
+	.error-icon    { font-size: 11.5rem; }
+	.error-text    { font-size: 2.25rem; }
+	.error-subtext { font-size: 1.25rem; }
 </style>
 </head>
 
@@ -141,5 +157,16 @@
 		render(handlesFunStuff, true);
 	</script>
 	<script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<noscript>
+		<div class="error-flexbox">
+			<div class="self-start"></div>
+			<div class="max-w-lg error-box">
+				<div class="error-icon">🤦🏻‍♂️</div>
+				<div class="error-text">Javascript Disabled!</div>
+				<div class="error-subtext">TwitGrid won't work without it.</div>
+			</div>
+			<div class="max-w-lg self-end"></div>
+		</div>
+	</noscript>
 </body>
 </html>
