--- a/twitgrid.html
+++ b/twitgrid.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TwitGrid: Because TweetDeck wastes too many px, and my time.</title>
+<title>TwitGrid: Because TweetDeck is a mess at times.</title>
 <style>
 	/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
@@ -221,23 +221,6 @@
 
 		// Ok, I get it now.
 
-		// const isInViewport = el => {
-		// 	const { top, bottom } = el.getBoundingClientRect();
-		// 	const vHeight = (window.innerHeight || document.documentElement.clientHeight);
-
-		// 	console.log(`window.innerHeight: ${window.innerHeight}`);
-		// 	console.log(`document.documentElement.clientHeight: ${document.documentElement.clientHeight}`);
-
-		// 	console.log(`top: ${top}`);
-		// 	console.log(`bottom: ${bottom}`);
-		// 	console.log(`vHeight: ${vHeight}`);
-
-		// 	const visible = ((top > 0 || bottom > 0) && top < vHeight);
-		// 	console.log(`visible: ${visible}, ${el.getAttribute('id')}`);
-
-		// 	return visible;
-		// };
-
 		const isInViewport = el => {
 			const { top } = el.getBoundingClientRect();
 
@@ -245,22 +228,14 @@
 			// in positioning.
 
 			const visible = (-10.0 < top && top < 10.0);
-			console.log(`visible: ${visible}, ${el.getAttribute('id')}`);
+			// console.log(`visible: ${visible}, ${el.getAttribute('id')}`);
 
 			return visible;
 		}
 
-		// .scrollTo / .scrollIntoView do not work on Android.
-
-		// None of these worksarounds work with Chromium on Android.
-		// https://support.google.com/chrome/thread/46920886?hl=en
-
-		// const scrollTo = el => {
-		// 	const { top, bottom } = el.getBoundingClientRect();
-		// 	window.scrollTo(0, top);
-		// }
-
-		// .scrollIntoView does NOT WORK on mobile phones.
+		const go = page => {
+			document.getElementById(`page-${page}`).scrollIntoView( {behavior: 'smooth'} );
+		};
 
 		const clickedUp = e => {
 			// Figure out which of the pages is currently in view.
@@ -269,24 +244,12 @@
 			let page = 0;
 
 			for ( ; page < pageCount; ) {
-				// console.log(`page: ${page}`);
 				if (isInViewport(document.getElementById(`page-${page}`))) break;
 				page++;
 			}
 
-			// console.log(page);
-
 			if (page > 0) {
-				let newPage = page - 1;
-				let el = document.getElementById(`page-${newPage}`);
-				
-				console.log(el);
-
-				// Also doesn't fix the issue:
-				// https://stackoverflow.com/questions/15691569/javascript-issue-with-scrollto-in-chrome
-				// setTimeout(() => { el.scrollIntoView({ behavior: "smooth" }) });
-				
-				el.scrollIntoView({ behavior: "smooth" });
+				go(page - 1);
 			}
 		};
 
@@ -301,17 +264,18 @@
 				page++;
 			}
 
-			// console.log(page);
-
 			if (page < pageCount - 1) {
-				let newPage = page + 1;
-				let el = document.getElementById(`page-${newPage}`);
-
-				console.log(el);
-				// setTimeout(() => { el.scrollIntoView({ behavior: "smooth" }) });
-
-				el.scrollIntoView({ behavior: "smooth" });
+				go(page + 1);
 			}
+		};
+
+		const keyUp = (e) => {
+			// Because 'overflow: hidden', we need to implement scrolling keyboard handling
+			// ourselves.
+			if      (e.key == 'PageUp')   clickedUp();
+			else if (e.key == 'PageDown') clickedDown();
+			else if (e.key == 'Home')     go(0);
+			else if (e.key == 'End')      go(pageCount - 1);
 		};
 
 		(() => {
@@ -320,6 +284,20 @@
 
 			render(handlesTopInterests);
 			render(handlesFunStuff, true);
+
+			// Handle global keyboard shortcuts.
+			window.addEventListener('keyup', keyUp, false);
+
+			// Disable auto-scroll to last viewed position, also, y-location 0 seems to mean
+			// something different on mobile when paging, it's the top of the currently-viewed
+			// page.
+			//
+			// This doesn't quite work because of Twitter loading in iframes. Haven't found
+			// quite the right call.
+			window.onbeforeunload = () => {
+				// const { top } = document.getElementById('page-0').getBoundingClientRect();
+				window.scrollTo(0, 0);
+			};
 		})();
 	</script>
 	<script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -334,28 +312,35 @@
 			<div class="max-w-lg self-end"></div>
 		</div>
 	</noscript>
+	<div class="error-flexbox">
+		<div class="self-start"></div>
+		<div class="max-w-lg error-box">
+			<div class="error-icon">⌛</div>
+			<div class="error-text">Loading...</div>
+			<div class="error-subtext">If you have an Ad Blocker or Strict
+			Tracking Prevention enabled on Firefox or Edge, this may not
+			work. Chrome of course, by default, leaks like a sieve.</div>
+		</div>
+		<div class="max-w-lg self-end"></div>
+	</div>
 	<div id="pagingButtons">
 		<!-- https://css-tricks.com/forums/topic/how-to-make-an-svg-fit-to-the-parent-container-100/#post-159784 -->
-		<div class="button" onclick="clickedUp()">
-			<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
-				xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
-				xmlns="http://www.w3.org/2000/svg" id="svg8" version="1.1" viewBox="0 0 39.6875 39.6875">
-				<g transform="translate(-57.235313,-56.668976)" id="layer1">
-					<circle r="19.84375" cy="76.512726" cx="77.079063" id="path836"
+		<div class="button">
+			<svg viewBox="0 0 39.6875 39.6875">
+				<g transform="translate(-57.235313,-56.668976)">
+					<circle r="19.84375" cy="76.512726" cx="77.079063"
 						style="fill:#ffdc81;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:49.28266144;stroke-opacity:1;paint-order:normal" />
-					<path id="path826-3" d="M 64.869589,83.272279 77.07906,71.062809 89.288537,83.272279"
+					<path d="M 64.869589,83.272279 77.07906,71.062809 89.288537,83.272279"
 						style="fill:none;stroke:#643100;stroke-width:3.4395833;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
 				</g>
 			</svg>
 		</div>
-		<div class="button" onclick="clickedDown()">
-			<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
-				xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
-				xmlns="http://www.w3.org/2000/svg" id="svg8" version="1.1" viewBox="0 0 39.6875 39.6875">
-				<g transform="translate(-57.235313,-56.668976)" id="layer1">
-					<circle r="19.84375" cy="76.512726" cx="77.079063" id="path836-7"
+		<div class="button">
+			<svg viewBox="0 0 39.6875 39.6875">
+				<g transform="translate(-57.235313,-56.668976)">
+					<circle r="19.84375" cy="76.512726" cx="77.079063"
 						style="fill:#ffdc81;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:49.28266144;stroke-opacity:1;paint-order:normal" />
-					<path id="path826-3-1" d="m 64.86959,70.811518 12.20948,12.20947 12.20947,-12.20947"
+					<path d="m 64.86959,70.811518 12.20948,12.20947 12.20947,-12.20947"
 						style="fill:none;stroke:#643100;stroke-width:3.4395833;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
 				</g>
 			</svg>
