Add event handlers, removed too much

--- a/twitgrid.html
+++ b/twitgrid.html
@@ -319,13 +319,13 @@
 			<div class="error-text">Loading...</div>
 			<div class="error-subtext">If you have an Ad Blocker or Strict
 			Tracking Prevention enabled on Firefox or Edge, this may not
-			work. Chrome of course, by default, leaks like a sieve.</div>
+			work.<p/>Chrome of course, by default, leaks like a sieve.</div>
 		</div>
 		<div class="max-w-lg self-end"></div>
 	</div>
 	<div id="pagingButtons">
 		<!-- https://css-tricks.com/forums/topic/how-to-make-an-svg-fit-to-the-parent-container-100/#post-159784 -->
-		<div class="button">
+		<div class="button" onclick="clickedUp()">
 			<svg viewBox="0 0 39.6875 39.6875">
 				<g transform="translate(-57.235313,-56.668976)">
 					<circle r="19.84375" cy="76.512726" cx="77.079063"
@@ -335,7 +335,7 @@
 				</g>
 			</svg>
 		</div>
-		<div class="button">
+		<div class="button" onclick="clickedDown()">
 			<svg viewBox="0 0 39.6875 39.6875">
 				<g transform="translate(-57.235313,-56.668976)">
 					<circle r="19.84375" cy="76.512726" cx="77.079063"
