--- a/twitgrid.html
+++ b/twitgrid.html
@@ -4,6 +4,8 @@
 <meta name="google" content="notranslate">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
+<link rel="icon" type="image/png" sizes="32x32" href="twitgrid-icon-32.png">
+<link rel="apple-touch-icon" sizes="512x512" href="twitgrid-icon-512.png">
 <meta property="og:url" content="https://vilimpoc.org/research/TwitGrid">
 <meta property="og:title" content="TwitGrid Live Demo">
 <meta property="og:description" content="A simple, broadsheet layout for Twitter feeds, with keyboard navigation.">
@@ -18,6 +20,7 @@
 <meta property="twitter:image" content="https://vilimpoc.org/research/TwitGrid/twitgrid-social.png">
 <meta property="twitter:title" content="TwitGrid Live Demo">
 <meta property="twitter:description" content="A simple, broadsheet layout for Twitter feeds, with keyboard navigation.">
+<meta name="twitter:dnt" content="on">
 <title>TwitGrid: Because TweetDeck is a mess at times.</title>
 <style>
 	/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
@@ -144,9 +147,15 @@
 
 	<script>
 		// Change this to suit the width of your monitor.
-		const columnCount = 5;
+		let columnCount = 5;
+		let pageCount   = 0;
 
-		let pageCount = 0;
+		const setColumnCount = c => {
+			columnCount  = c;
+
+			let cssWidth = 100.0 / c;
+			document.styleSheets[0].insertRule(`.twit { flex: 0 0 ${cssWidth}%; }`, document.styleSheets[0].cssRules.length);
+		}
 
 		const makePage = twits => {
 			const d = document.createElement('div');
@@ -177,6 +186,7 @@
 			a.setAttribute('data-height', '100vh');
 			a.setAttribute('data-theme', 'dark');
 			a.setAttribute('data-chrome', 'nofooter');
+			a.setAttribute('data-dnt', 'true');
 			a.setAttribute('href', `https://twitter.com/${handle}`);
 
 			d.appendChild(a);
@@ -306,15 +316,63 @@
 			else if (e.key == 'End')      go(pageCount - 1);
 		};
 
-		(() => {
+		const showDefaults = () => {
 			const handlesTopInterests = 'vilimpoc anandwrites checklyhq GreatDismal tim_nolet';
 			const handlesFunStuff     = 'BVG_Kampagne fryuppolice KoreanTravel thingiverse NI_News steak_umm ConanOBrien taylorswift13 jimmykimmel';
 
 			render(handlesTopInterests);
 			render(handlesFunStuff, true);
+		};
+
+		(() => {
+			// Parametrize URL fragment
+			// Example: https://vilimpoc.org/research/TwitGrid/#users=vilimpoc,dspillere,gusso,kyran_dale,mihriminaz;users_sorted=therealelp,Fallout,SCMPNews,ADFC_Berlin,tacobell;columns=4
+			//
+			// users=
+			// users_sorted=
+			// columns=
+
+			let hash = location.hash.trim().replaceAll('#', '');
+
+			if (hash.length == 0 || (!hash.includes('users') && !(hash.includes('users_sorted')))) {
+				showDefaults();
+			}
+			else {
+				try {
+					let params = hash.split(';');
+
+					params.forEach(e => {
+						const [ key, value ] = e.split('=');
+
+						switch (key)
+						{
+							case 'columns':
+								let newColumnCount = Math.floor(value);
+								setColumnCount(newColumnCount > 0 ? newColumnCount : 1);
+								break;
+						}
+					})
+
+					params.forEach(e => {
+						const [ view, handles ] = e.split('=');
+						const sorted = view.includes('_sorted') ? true : false;
+
+						if (view.startsWith('users')) {
+							render(handles.replaceAll(',', ' '), sorted);
+						}
+					});
+				}
+				catch {
+					showDefaults();
+				}
+			}
 
 			// Handle global keyboard shortcuts.
 			window.addEventListener('keyup', keyUp, false);
+
+			window.onhashchange = () => {
+				window.location.reload();
+			};
 
 			// Disable auto-scroll to last viewed position, also, y-location 0 seems to mean
 			// something different on mobile when paging, it's the top of the currently-viewed
@@ -328,9 +386,9 @@
 			};
 		})();
 	</script>
-	<script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<noscript>
-		<div class="error-flexbox">
+		<div class="error-flexbox" id='error'>
 			<div class="self-start"></div>
 			<div class="max-w-lg error-box">
 				<div class="error-icon">🤦🏻‍♂️</div>
@@ -340,7 +398,7 @@
 			<div class="max-w-lg self-end"></div>
 		</div>
 	</noscript>
-	<div class="error-flexbox">
+	<div class="error-flexbox" id='loading'>
 		<div class="self-start"></div>
 		<div class="max-w-lg error-box">
 			<div class="error-icon">⌛</div>
